--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "react": "^19.1.1",
@@ -20,6 +21,7 @@
     "react-is": "^19.1.1",
     "react-loader-spinner": "^6.1.6",
     "react-multi-carousel": "^2.8.6",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-toast": "^1.0.3",
     "recharts": "^3.1.2",
